开始重新实现异步io

--- a/Gash/Gash.vcxproj
+++ b/Gash/Gash.vcxproj
@@ -153,16 +153,13 @@
   <ItemGroup>
     <ClCompile Include="base\algorithm\GEncoder.cpp" />
     <ClCompile Include="base\algorithm\md5\md5.c" />
-    <ClCompile Include="base\async\fileio\GAsyncDevice.cpp" />
-    <ClCompile Include="base\async\fileio\GAsyncFile.cpp" />
-    <ClCompile Include="base\async\fileio\GAsyncHttp.cpp" />
-    <ClCompile Include="base\async\fileio\GAsyncIO.cpp" />
-    <ClCompile Include="base\async\fileio\GAsyncTCPSocket.cpp" />
     <ClCompile Include="base\async\GAsyncEngine.cpp" />
     <ClCompile Include="base\async\GAsyncLoop.cpp" />
     <ClCompile Include="base\charset\GEncoding.cpp" />
     <ClCompile Include="base\ComInit.cpp" />
-    <ClCompile Include="base\device\GDevice.cpp" />
+    <ClCompile Include="base\device\GAsyncIO.cpp" />
+    <ClCompile Include="base\exception_handler\GNewHandler.cpp" />
+    <ClCompile Include="base\io\GIODevice.cpp" />
     <ClCompile Include="base\device\GFileDevice.cpp" />
     <ClCompile Include="base\device\GSocket.cpp" />
     <ClCompile Include="base\FileDialog\GFileDialog.cpp" />
@@ -182,8 +179,8 @@
     <ClCompile Include="base\io\GBufferIO.cpp" />
     <ClCompile Include="base\io\GFile.cpp" />
     <ClCompile Include="base\io\GFileIO.cpp" />
-    <ClCompile Include="base\io\GIODevice.cpp" />
     <ClCompile Include="base\net\GHttpClient.cpp" />
+    <ClCompile Include="base\device\GIOCallback.cpp" />
     <ClCompile Include="base\platform\win32\GWin32Service.cpp" />
     <ClCompile Include="base\platform\win32\GWin32SystemServiceManager.cpp" />
     <ClCompile Include="base\reflection\GClass.cpp" />
@@ -221,24 +218,23 @@
   <ItemGroup>
     <ClInclude Include="base\algorithm\GEncoder.h" />
     <ClInclude Include="base\algorithm\md5\md5.h" />
-    <ClInclude Include="base\async\fileio\GAsyncDevice.h" />
-    <ClInclude Include="base\async\fileio\GAsyncFile.h" />
-    <ClInclude Include="base\async\fileio\GAsyncHttp.h" />
-    <ClInclude Include="base\async\fileio\GAsyncIO.h" />
-    <ClInclude Include="base\async\fileio\GAsyncTCPSocket.h" />
-    <ClInclude Include="base\async\fileio\GHttpRequest.h" />
-    <ClInclude Include="base\async\fileio\GHttpResponse.h" />
     <ClInclude Include="base\async\GAsyncEngine.h" />
     <ClInclude Include="base\async\GAsyncLoop.h" />
     <ClInclude Include="base\block_container\GBlockingQueue.h" />
     <ClInclude Include="base\charset\GEncoding.h" />
-    <ClInclude Include="base\device\GDevice.h" />
+    <ClInclude Include="base\device\GAsyncIO.h" />
+    <ClInclude Include="base\exception_handler\GNewHandler.h" />
+    <ClInclude Include="base\GCallback.h" />
+    <ClInclude Include="base\GMemoryGC.h" />
+    <ClInclude Include="base\io\GBufferPool.h" />
+    <ClInclude Include="base\io\GIODevice.h" />
     <ClInclude Include="base\device\GFileDevice.h" />
     <ClInclude Include="base\device\GSocket.h" />
     <ClInclude Include="base\FileDialog\GFileDialog.h" />
     <ClInclude Include="base\GAllocator.h" />
     <ClInclude Include="base\GArray.h" />
     <ClInclude Include="base\GBuffer.h" />
+    <ClInclude Include="base\GCallable.h" />
     <ClInclude Include="base\GDataArray.h" />
     <ClInclude Include="base\GDepsIncludes.h" />
     <ClInclude Include="base\GEnums.h" />
@@ -265,11 +261,10 @@
     <ClInclude Include="base\io\GBufferIO.h" />
     <ClInclude Include="base\io\GFile.h" />
     <ClInclude Include="base\io\GFileIO.h" />
-    <ClInclude Include="base\io\GIODevice.h" />
     <ClInclude Include="base\math\GMath.h" />
     <ClInclude Include="base\net\GDnsQuery.h" />
     <ClInclude Include="base\net\GHttpClient.h" />
-    <ClInclude Include="base\net\GOverlappedCallback.h" />
+    <ClInclude Include="base\device\GIOCallback.h" />
     <ClInclude Include="base\platform\GService.h" />
     <ClInclude Include="base\platform\GSystemServiceManager.h" />
     <ClInclude Include="base\platform\win32\GWin32Service.h" />
