开始实现gzip解压流

--- a/Gash/Gash.vcxproj
+++ b/Gash/Gash.vcxproj
@@ -159,9 +159,11 @@
     <ClCompile Include="base\ComInit.cpp" />
     <ClCompile Include="base\device\GAsyncIO.cpp" />
     <ClCompile Include="base\exception_handler\GNewHandler.cpp" />
+    <ClCompile Include="base\GErrno.cpp" />
+    <ClCompile Include="base\io\GNSLookup.cpp" />
     <ClCompile Include="base\io\GIODevice.cpp" />
     <ClCompile Include="base\device\GFileDevice.cpp" />
-    <ClCompile Include="base\device\GSocket.cpp" />
+    <ClCompile Include="base\io\sync\GSocket.cpp" />
     <ClCompile Include="base\FileDialog\GFileDialog.cpp" />
     <ClCompile Include="base\GAllocator.cpp" />
     <ClCompile Include="base\GBuffer.cpp" />
@@ -179,8 +181,14 @@
     <ClCompile Include="base\io\GBufferIO.cpp" />
     <ClCompile Include="base\io\GFile.cpp" />
     <ClCompile Include="base\io\GFileIO.cpp" />
+    <ClCompile Include="base\io\GSocketPool.cpp" />
+    <ClCompile Include="base\io\sync\GFileSync.cpp" />
     <ClCompile Include="base\net\GHttpClient.cpp" />
     <ClCompile Include="base\device\GIOCallback.cpp" />
+    <ClCompile Include="base\net\GNetEngine.cpp" />
+    <ClCompile Include="base\platform\GEvent.cpp" />
+    <ClCompile Include="base\platform\GEventPool.cpp" />
+    <ClCompile Include="base\platform\win32\GWin32Event.cpp" />
     <ClCompile Include="base\platform\win32\GWin32Service.cpp" />
     <ClCompile Include="base\platform\win32\GWin32SystemServiceManager.cpp" />
     <ClCompile Include="base\reflection\GClass.cpp" />
@@ -207,6 +215,7 @@
     <ClCompile Include="base\stream\GEncodeStream.cpp" />
     <ClCompile Include="base\stream\GEncodingTransform.cpp" />
     <ClCompile Include="base\stream\GFileStream.cpp" />
+    <ClCompile Include="base\stream\GGUnzipStream.cpp" />
     <ClCompile Include="base\stream\GIOStream.cpp" />
     <ClCompile Include="base\stream\GMultiStream.cpp" />
     <ClCompile Include="base\stream\GStream.cpp" />
@@ -221,12 +230,15 @@
     <ClInclude Include="base\async\GAsyncEngine.h" />
     <ClInclude Include="base\async\GAsyncLoop.h" />
     <ClInclude Include="base\block_container\GBlockingQueue.h" />
+    <ClInclude Include="base\block_container\GBlockingStack.h" />
     <ClInclude Include="base\charset\GEncoding.h" />
     <ClInclude Include="base\device\GAsyncIO.h" />
     <ClInclude Include="base\exception_handler\GNewHandler.h" />
     <ClInclude Include="base\GCallback.h" />
+    <ClInclude Include="base\GErrno.h" />
     <ClInclude Include="base\GMemoryGC.h" />
     <ClInclude Include="base\io\GBufferPool.h" />
+    <ClInclude Include="base\io\GNSLookup.h" />
     <ClInclude Include="base\io\GIODevice.h" />
     <ClInclude Include="base\device\GFileDevice.h" />
     <ClInclude Include="base\device\GSocket.h" />
@@ -261,12 +273,20 @@
     <ClInclude Include="base\io\GBufferIO.h" />
     <ClInclude Include="base\io\GFile.h" />
     <ClInclude Include="base\io\GFileIO.h" />
+    <ClInclude Include="base\io\GSocketPool.h" />
+    <ClInclude Include="base\io\sync\GFileSync.h" />
+    <ClInclude Include="base\io\sync\GIODeviceSync.h" />
+    <ClInclude Include="base\io\GIOEnums.h" />
+    <ClInclude Include="base\io\sync\GSocket.h" />
     <ClInclude Include="base\math\GMath.h" />
-    <ClInclude Include="base\net\GDnsQuery.h" />
     <ClInclude Include="base\net\GHttpClient.h" />
     <ClInclude Include="base\device\GIOCallback.h" />
+    <ClInclude Include="base\net\GNetEngine.h" />
+    <ClInclude Include="base\platform\GEvent.h" />
+    <ClInclude Include="base\platform\GEventPool.h" />
     <ClInclude Include="base\platform\GService.h" />
     <ClInclude Include="base\platform\GSystemServiceManager.h" />
+    <ClInclude Include="base\platform\win32\GWin32Event.h" />
     <ClInclude Include="base\platform\win32\GWin32Service.h" />
     <ClInclude Include="base\platform\win32\GWin32SystemServiceManager.h" />
     <ClInclude Include="base\reflection\GClass.h" />
@@ -303,6 +323,7 @@
     <ClInclude Include="base\stream\GEncodeStream.h" />
     <ClInclude Include="base\stream\GEncodingTransform.h" />
     <ClInclude Include="base\stream\GFileStream.h" />
+    <ClInclude Include="base\stream\GGUnzipStream.h" />
     <ClInclude Include="base\stream\GIOStream.h" />
     <ClInclude Include="base\stream\GMultiStream.h" />
     <ClInclude Include="base\stream\GStream.h" />
