--- a/Gash/Gash.vcxproj
+++ b/Gash/Gash.vcxproj
@@ -160,10 +160,13 @@
     <ClCompile Include="base\device\GAsyncIO.cpp" />
     <ClCompile Include="base\exception_handler\GNewHandler.cpp" />
     <ClCompile Include="base\GErrno.cpp" />
+    <ClCompile Include="base\GTempMemory.cpp" />
+    <ClCompile Include="base\io\GHttpResponse.cpp" />
     <ClCompile Include="base\io\GNSLookup.cpp" />
     <ClCompile Include="base\io\GIODevice.cpp" />
     <ClCompile Include="base\device\GFileDevice.cpp" />
-    <ClCompile Include="base\io\sync\GSocket.cpp" />
+    <ClCompile Include="base\io\sync\GHttpSync.cpp" />
+    <ClCompile Include="base\io\sync\GSocketSync.cpp" />
     <ClCompile Include="base\FileDialog\GFileDialog.cpp" />
     <ClCompile Include="base\GAllocator.cpp" />
     <ClCompile Include="base\GBuffer.cpp" />
@@ -183,6 +186,7 @@
     <ClCompile Include="base\io\GFileIO.cpp" />
     <ClCompile Include="base\io\GSocketPool.cpp" />
     <ClCompile Include="base\io\sync\GFileSync.cpp" />
+    <ClCompile Include="base\io\sync\GTLSSocketSync.cpp" />
     <ClCompile Include="base\net\GHttpClient.cpp" />
     <ClCompile Include="base\device\GIOCallback.cpp" />
     <ClCompile Include="base\net\GNetEngine.cpp" />
@@ -215,12 +219,15 @@
     <ClCompile Include="base\stream\GEncodeStream.cpp" />
     <ClCompile Include="base\stream\GEncodingTransform.cpp" />
     <ClCompile Include="base\stream\GFileStream.cpp" />
-    <ClCompile Include="base\stream\GGUnzipStream.cpp" />
+    <ClCompile Include="base\stream\GGUncompressStream.cpp" />
+    <ClCompile Include="base\stream\GHttpParserStream.cpp" />
     <ClCompile Include="base\stream\GIOStream.cpp" />
     <ClCompile Include="base\stream\GMultiStream.cpp" />
     <ClCompile Include="base\stream\GStream.cpp" />
     <ClCompile Include="base\stream\GStreamDevice.cpp" />
     <ClCompile Include="base\stream\GTextStream.cpp" />
+    <ClCompile Include="base\stream\GTransformStream.cpp" />
+    <ClCompile Include="base\stream\GUnpackStream.cpp" />
     <ClCompile Include="base\sync\GLocker.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -236,12 +243,14 @@
     <ClInclude Include="base\exception_handler\GNewHandler.h" />
     <ClInclude Include="base\GCallback.h" />
     <ClInclude Include="base\GErrno.h" />
+    <ClInclude Include="base\GHashConst.h" />
     <ClInclude Include="base\GMemoryGC.h" />
+    <ClInclude Include="base\GTempMemory.h" />
     <ClInclude Include="base\io\GBufferPool.h" />
+    <ClInclude Include="base\io\GHttpResponse.h" />
     <ClInclude Include="base\io\GNSLookup.h" />
     <ClInclude Include="base\io\GIODevice.h" />
     <ClInclude Include="base\device\GFileDevice.h" />
-    <ClInclude Include="base\device\GSocket.h" />
     <ClInclude Include="base\FileDialog\GFileDialog.h" />
     <ClInclude Include="base\GAllocator.h" />
     <ClInclude Include="base\GArray.h" />
@@ -275,9 +284,10 @@
     <ClInclude Include="base\io\GFileIO.h" />
     <ClInclude Include="base\io\GSocketPool.h" />
     <ClInclude Include="base\io\sync\GFileSync.h" />
+    <ClInclude Include="base\io\sync\GHttpSync.h" />
     <ClInclude Include="base\io\sync\GIODeviceSync.h" />
     <ClInclude Include="base\io\GIOEnums.h" />
-    <ClInclude Include="base\io\sync\GSocket.h" />
+    <ClInclude Include="base\io\sync\GSocketSync.h" />
     <ClInclude Include="base\math\GMath.h" />
     <ClInclude Include="base\net\GHttpClient.h" />
     <ClInclude Include="base\device\GIOCallback.h" />
@@ -323,14 +333,18 @@
     <ClInclude Include="base\stream\GEncodeStream.h" />
     <ClInclude Include="base\stream\GEncodingTransform.h" />
     <ClInclude Include="base\stream\GFileStream.h" />
-    <ClInclude Include="base\stream\GGUnzipStream.h" />
+    <ClInclude Include="base\stream\GGUncompressStream.h" />
+    <ClInclude Include="base\stream\GHttpParserStream.h" />
     <ClInclude Include="base\stream\GIOStream.h" />
     <ClInclude Include="base\stream\GMultiStream.h" />
     <ClInclude Include="base\stream\GStream.h" />
     <ClInclude Include="base\stream\GStreamDevice.h" />
     <ClInclude Include="base\stream\GTextStream.h" />
+    <ClInclude Include="base\stream\GTransformStream.h" />
+    <ClInclude Include="base\stream\GUnpackStream.h" />
     <ClInclude Include="base\sync\GLocker.h" />
     <ClInclude Include="Gash.h" />
+    <ClInclude Include="base\io\sync\GTLSSocketSync.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
